refactor: item id wrapper